Fix layout issue on Research listings

--- a/web/app/themes/brookhouse/assets/css/custom.css
+++ b/web/app/themes/brookhouse/assets/css/custom.css
@@ -505,6 +505,8 @@ article.page ul li {
 
 .external-link {
     position:relative;
+    padding-right: 20px;
+    display: inline-block;
 }
 .external-link:before {
     content: " ";
@@ -516,7 +518,7 @@ article.page ul li {
     display: inline-block;
     position: absolute;
     top: 2px;
-    right: -20px;
+    right: 0;
 }
 
 /* Search form */
